# unicity-aos.github.io

./: .gitignore  README.md
.github/workflows/: ci.yml  pages.yml
kernel-web/: Cargo.toml  build.rs
kernel-web/pkg/: kernel_web.d.ts  kernel_web.js  kernel_web_bg.wasm  kernel_web_bg.wasm.d.ts
kernel-web/src/: lib.rs
kernel-web/tests/: bridge.rs
site/: astro.config.mjs  package-lock.json  package.json
site-capsules/: build.sh  package.json  smoke.mjs
site-capsules/site-echo/: Capsule.toml  Cargo.toml  site-echo.component.wasm
site-capsules/site-echo/.cargo/: config.toml
site-capsules/site-echo/src/: lib.rs
site-capsules/site-guard/: Capsule.toml  Cargo.toml  site-guard.component.wasm
site-capsules/site-guard/src/: lib.rs
site-capsules/site-pulse/: Capsule.toml  Cargo.toml  site-pulse.component.wasm
site-capsules/site-pulse/src/: lib.rs
site/public/: install.sh  oracle-install.sh
site/scripts/: test-install-orchestration.sh  test-release-contract.mjs
site/src/: content.config.ts  env.d.ts
site/src/components/: AgentMark.astro  AgentPill.astro  CapsuleRing.astro  Hero.astro  Hud.astro  SceneAgent.astro  SceneAudiences.astro  SceneBooks.astro  SceneBring.astro  SceneCapability.astro  SceneCapsules.astro  SceneDumbKernel.astro  SceneGrow.astro  SceneHome.astro  SceneKeys.astro  SceneLayers.astro  SceneProof.astro  SceneStart.astro  SceneThesis.astro
site/src/layouts/: Base.astro  Docs.astro
site/src/lib/: docs-nav.ts  release.ts
site/src/pages/: build.astro  how-it-works.astro  index.astro  link.astro  llms-full.txt.ts  llms.txt.ts  (+4 more)
(+64 files in other folders)
