[package]
name = "site-guard"
version = "0.1.0"
edition = "2024"
description = "Layering-demo section capsule — blocks or passes through page input by a case-insensitive blocklist"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { version = "0.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
